Bug 5501 - Kernel should build on nls less systems (patch included)
Summary: Kernel should build on nls less systems (patch included)
Status: CLOSED CODE_FIX
Alias: None
Product: Other
Classification: Unclassified
Component: Configuration (show other bugs)
Hardware: i386 Linux
: P2 blocking
Assignee: Dominik Brodowski
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-10-26 07:19 UTC by Yuri Vasilvski
Modified: 2005-11-17 14:03 UTC (History)
0 users

See Also:
Kernel Version: >=2.6.12
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
sources-nogettext.patch (1.34 KB, patch)
2005-10-26 07:22 UTC, Yuri Vasilvski
Details | Diff

Description Yuri Vasilvski 2005-10-26 07:19:23 UTC
Hi,

The current 2.6.x (with x >= 12) vanilla kernels can't be build on systems
without nls support because the *config targets use funcions provided by
libintl.h. But unfortunately this header can not be found on nls less systems
like uClibc based ones.

I Include a patch that detect if there is libintl.h on system includes and if it
can't be found it disables nls functionality from *config targets.

For more info please see Gentoo bug #99810
(http://bugs.gentoo.org/show_bug.cgi?id=99810)

Yuri.
Comment 1 Yuri Vasilvski 2005-10-26 07:22:27 UTC
Created attachment 6391 [details]
sources-nogettext.patch

The same patch as in Gentoo bugs, with the modification of s/=/:=/ in detection
of libintl.h (KBUILD_HAVE_NLS) file so it can be passed to make and will not be
overwritten.
Comment 2 Yuri Vasilvski 2005-10-26 07:27:10 UTC
Ok, ignore the previous comment ;-)

On vapier's advise I submitted it upstream:
http://bugzilla.kernel.org/show_bug.cgi?id=5501

Also I made a tiny modification to the patch (in upstream bugzilla)

(I was kind of nervous about that as this is a kernel after all)
Comment 3 Yuri Vasilvski 2005-10-26 07:30:20 UTC
Please ignore Comment #2, I intended to post it to Gentoo's Bugzilla but posted
in the wrong window (all bugzillas look so alike!)

My apology for this mistake.
Comment 4 Andrew Morton 2005-10-26 11:34:37 UTC
Please submit the patch via email per
http://www.zip.com.au/~akpm/linux/patches/stuff/tpp.txt, to myself and cc
linux-kernel@vger.kernel.org.  Thanks.
Comment 5 Dominik Brodowski 2005-11-17 14:03:27 UTC
Seems to have been merged into 2.6.15-rc1, at least.

Note You need to log in before you can comment on or make changes to this bug.